# Products_FastAPI

./: .env.sample  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  docker-entrypoint.sh  gunicorn.conf.py  prestart.py  pyproject.toml  tox.ini
.github/workflows/: Deploy.yml  flake.yml  test.yml
alembic/: env.py
alembic/versions/: 18202417a783_del_category_id_in_product_and_brandname.py  2697935b120e_initial_migration.py  2bd835447ad8_add_product_status_column.py  3a6fb8b03b28_correct_document_model.py  5813fa1df89b_.py  c8e11dfe4de2_len_128_product_name.py  cbca7bcad4db_add_brands_and_id.py
app/: main.py
app/api/: __init__.py  setup.py
app/api/v3/: api.py
app/api/v3/routers/: seller_products.py
app/cache/: __init__.py  cache.py
app/core/: config.py  logger.py
app/db/: __init__.py
app/middlewares/: __init__.py  auth.py  http_log.py  request_info.py
app/models/: __init__.py  base.py  fields_extensions_models.py  products_models.py  requests.py
app/mq/: __init__.py  rabbitmq.py
app/schemas/: base.py  castom_types.py  categories_schemas.py  exceptions.py  fields_extensions_schemas.py  products_schemas.py
app/services/: base.py  seller_products.py
populate_db/: mock_data_db.py  populate_db.py
populate_db/data/: brands.py  categories_tree.py  clothes_sizes.py  colors.py
tests/: conftest.py  crud.py  env_test  mocks.py  pytest.ini  requirements.txt  settings.py  utils.py
tests/docker/: test.Dockerfile  test.Dockerfile.dockerignore  test.docker-compose.yml
tests/fixtures/: data.py  fixtures.py  test_fixtures.py
tests/integration_tests/: data.py  test_cache.py  test_docs_endpoints.py  test_products_anon_endpoints.py  test_products_auth_endpoints.py
tests/unit_tests/: test_config.py  test_main.py  test_rabbitmq.py  test_service.py  test_setup.py
tests/unit_tests/auth/: test_auth.py
tests/unit_tests/db/: data.py  test_db.py
tests/unit_tests/schemas/: test_validators.py
